--- a/web/app/common/templates/navigation.html
+++ b/web/app/common/templates/navigation.html
@@ -28,9 +28,7 @@
             <li ui-sref-active="active">
                 <a ui-sref="index.minor"><i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span></a>
             </li>
-            <li ui-sref-active="active">
-                <a ui-sref="index.role"><i class="fa fa-desktop"></i> <span class="nav-label">Role page</span></a>
-            </li>
+
             <li ui-sref-active="active">
                 <a ui-sref="index.privilege"><i class="fa fa-desktop"></i> <span class="nav-label">Privilege page</span></a>
             </li>
@@ -44,6 +42,12 @@
                 <a ng-click="main.navigate('app.menu', 'menu.list')">
                     <i class="fa fa-list-alt"></i>
                     <span class="nav-label">Menu</span>
+                </a>
+            </li>
+            <li ng-class="{active: $state.includes('role.list')}">
+                <a ng-click="main.navigate('app.role', 'role.list')">
+                    <i class="fa fa-list-alt"></i>
+                    <span class="nav-label">Role</span>
                 </a>
             </li>
         </ul>
