--- a/web/app/common/templates/navigation.html
+++ b/web/app/common/templates/navigation.html
@@ -50,6 +50,12 @@
                     <span class="nav-label">Role</span>
                 </a>
             </li>
+            <li ng-class="{active: $state.includes('forgetPassword.wizard')}">
+                <a ng-click="main.navigate('app.forgetPassword', 'forgetPassword.wizard.step_one')">
+                    <i class="fa fa-list-alt"></i>
+                    <span class="nav-label">Forget Password</span>
+                </a>
+            </li>
         </ul>
 
     </div>
